fix: delete preview in dockerfile